--- a/DScaler/Plugins/DI_Weave/DI_Weave.vcproj
+++ b/DScaler/Plugins/DI_Weave/DI_Weave.vcproj
@@ -150,7 +150,7 @@
 						Name="VCCLCompilerTool"
 						Optimization="0"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="DI_WEAVE_EXPORTS;WIN32;_DEBUG;_WINDOWS;$(NoInherit)"/>
+						PreprocessorDefinitions=""/>
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Release|Win32">
@@ -158,7 +158,7 @@
 						Name="VCCLCompilerTool"
 						Optimization="3"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="DI_WEAVE_EXPORTS;WIN32;NDEBUG;_WINDOWS;$(NoInherit)"/>
+						PreprocessorDefinitions=""/>
 				</FileConfiguration>
 			</File>
 		</Filter>
