--- a/DScaler/Plugins/FLT_AdaptiveNoise/FLT_AdaptiveNoise.vcproj
+++ b/DScaler/Plugins/FLT_AdaptiveNoise/FLT_AdaptiveNoise.vcproj
@@ -151,7 +151,7 @@
 						Name="VCCLCompilerTool"
 						Optimization="0"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;FLT_AdaptiveNoise_EXPORTS;$(NoInherit)"
+						PreprocessorDefinitions=""
 						BrowseInformation="1"/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -160,7 +160,7 @@
 						Name="VCCLCompilerTool"
 						Optimization="3"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;FLT_AdaptiveNoise_EXPORTS;$(NoInherit)"
+						PreprocessorDefinitions=""
 						BrowseInformation="1"/>
 				</FileConfiguration>
 			</File>
