--- a/DScaler/Plugins/FLT_LinearCorrection/FLT_LinearCorrection.vcproj
+++ b/DScaler/Plugins/FLT_LinearCorrection/FLT_LinearCorrection.vcproj
@@ -150,7 +150,7 @@
 						Name="VCCLCompilerTool"
 						Optimization="0"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;$(NoInherit)"
+						PreprocessorDefinitions=""
 						AssemblerOutput="2"/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -159,7 +159,7 @@
 						Name="VCCLCompilerTool"
 						Optimization="3"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_MBCS;_USRDLL;FLT_LINEARCORRECTION_EXPORTS;$(NoInherit)"/>
+						PreprocessorDefinitions=""/>
 				</FileConfiguration>
 			</File>
 		</Filter>
