--- a/DScaler/Plugins/FLT_Sharpness/FLT_Sharpness.vcproj
+++ b/DScaler/Plugins/FLT_Sharpness/FLT_Sharpness.vcproj
@@ -156,7 +156,7 @@
 						Name="VCCLCompilerTool"
 						Optimization="3"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_MBCS;_USRDLL;FLT_Sharpness_EXPORTS;$(NoInherit)"/>
+						PreprocessorDefinitions=""/>
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Release|Win32">
@@ -165,7 +165,7 @@
 						Optimization="3"
 						FavorSizeOrSpeed="0"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_MBCS;_USRDLL;FLT_Sharpness_EXPORTS;$(NoInherit)"/>
+						PreprocessorDefinitions=""/>
 				</FileConfiguration>
 			</File>
 		</Filter>
