--- a/DScaler/Plugins/DI_Greedy2Frame/DI_Greedy2Frame2005.vcproj
+++ b/DScaler/Plugins/DI_Greedy2Frame/DI_Greedy2Frame2005.vcproj
@@ -402,7 +402,7 @@
 						Name="VCCLCompilerTool"
 						Optimization="0"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="DI_GREEDY2FRAME_EXPORTS;WIN32;_DEBUG;_WINDOWS;$(NoInherit)"
+						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -414,7 +414,7 @@
 						EnableIntrinsicFunctions="false"
 						FavorSizeOrSpeed="0"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="DI_GREEDY2FRAME_EXPORTS;WIN32;NDEBUG;_WINDOWS;$(NoInherit)"
+						PreprocessorDefinitions=""
 						AssemblerOutput="4"
 					/>
 				</FileConfiguration>
@@ -425,7 +425,7 @@
 						Name="VCCLCompilerTool"
 						Optimization="0"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="DI_GREEDY2FRAME_EXPORTS;WIN32;_DEBUG;_WINDOWS;$(NoInherit)"
+						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -437,7 +437,7 @@
 						EnableIntrinsicFunctions="false"
 						FavorSizeOrSpeed="0"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="DI_GREEDY2FRAME_EXPORTS;WIN32;NDEBUG;_WINDOWS;$(NoInherit)"
+						PreprocessorDefinitions=""
 						AssemblerOutput="4"
 					/>
 				</FileConfiguration>
