--- a/DScaler/Plugins/FLT_LuminChromaShift/FLT_LuminChromaShift2005.vcproj
+++ b/DScaler/Plugins/FLT_LuminChromaShift/FLT_LuminChromaShift2005.vcproj
@@ -410,7 +410,7 @@
 						Name="VCCLCompilerTool"
 						Optimization="0"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_MBCS;_USRDLL;FLT_LUMINCHROMASHIFT_EXPORTS;$(NoInherit)"
+						PreprocessorDefinitions=""
 						BasicRuntimeChecks="3"
 					/>
 				</FileConfiguration>
@@ -421,7 +421,7 @@
 						Name="VCCLCompilerTool"
 						Optimization="2"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_MBCS;_USRDLL;FLT_LUMINCHROMASHIFT_EXPORTS;$(NoInherit)"
+						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -431,7 +431,7 @@
 						Name="VCCLCompilerTool"
 						Optimization="0"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_MBCS;_USRDLL;FLT_LUMINCHROMASHIFT_EXPORTS;$(NoInherit)"
+						PreprocessorDefinitions=""
 						BasicRuntimeChecks="3"
 					/>
 				</FileConfiguration>
@@ -442,7 +442,7 @@
 						Name="VCCLCompilerTool"
 						Optimization="2"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_MBCS;_USRDLL;FLT_LUMINCHROMASHIFT_EXPORTS;$(NoInherit)"
+						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
 			</File>
